--- a/FastReportService.csproj
+++ b/FastReportService.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="FastReport.OpenSource" Version="2024.1.0" />
     <PackageReference Include="FastReport.OpenSource.Export.PdfSimple" Version="2024.1.0" />
+    <None Update="Reports/*.frx" CopyToOutputDirectory="Always" />
   </ItemGroup>
 
 </Project>
